--- a/index.html
+++ b/index.html
@@ -3,15 +3,18 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Magic Gift 🎄</title>
+<title>Christmas Magic Gift 🎄</title>
 
 <link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@600&display=swap" rel="stylesheet">
 
 <style>
+/* ===== BACKGROUND NOEL ===== */
 body{
     margin:0;
     height:100vh;
-    background: radial-gradient(circle at top,#1b2735,#090a0f);
+    background:
+      radial-gradient(circle at top, rgba(255,255,255,0.15), transparent 40%),
+      linear-gradient(180deg, #0f2027, #203a43, #2c5364);
     display:flex;
     justify-content:center;
     align-items:center;
@@ -20,11 +23,41 @@ body{
     color:white;
 }
 
-/* 🎁 Gift */
+/* Đèn Noel mờ */
+.light{
+    position:absolute;
+    width:12px;
+    height:12px;
+    border-radius:50%;
+    background:rgba(255,215,0,0.8);
+    box-shadow:0 0 20px rgba(255,215,0,0.8);
+    animation:twinkle 2s infinite alternate;
+}
+
+@keyframes twinkle{
+    from{opacity:.3; transform:scale(0.8);}
+    to{opacity:1; transform:scale(1.2);}
+}
+
+/* Tuyết */
+.snow{
+    position:absolute;
+    top:-10px;
+    color:white;
+    opacity:0.8;
+    animation:fall linear infinite;
+}
+
+@keyframes fall{
+    to{ transform:translateY(110vh); }
+}
+
+/* ===== GIFT ===== */
 .gift{
     position:relative;
     cursor:pointer;
     animation:ring 0.8s infinite;
+    z-index:2;
 }
 
 @keyframes ring{
@@ -80,10 +113,10 @@ body{
     transform:rotateX(120deg);
 }
 
-/* 💡 glow */
+/* glow */
 .glow{
     position:absolute;
-    inset:-60px;
+    inset:-70px;
     background:radial-gradient(circle,rgba(255,215,0,0.6),transparent 70%);
     opacity:0;
     transition:0.6s;
@@ -91,7 +124,7 @@ body{
 
 .gift.open .glow{ opacity:1; }
 
-/* ✨ glitter */
+/* glitter */
 .glitter{
     position:absolute;
     width:6px;
@@ -103,24 +136,18 @@ body{
 }
 
 @keyframes spread{
-    from{
-        transform:translate(0,0) scale(1);
-        opacity:1;
-    }
-    to{
-        transform:translate(var(--x),var(--y)) scale(0.3);
-        opacity:0;
-    }
+    from{transform:translate(0,0) scale(1);opacity:1;}
+    to{transform:translate(var(--x),var(--y)) scale(0.3);opacity:0;}
 }
 
-/* 💌 caption */
+/* caption */
 .caption{
     position:absolute;
     top:-30px;
     left:50%;
     transform:translateX(-50%);
-    background:rgba(255,255,255,0.15);
-    padding:16px 22px;
+    background:rgba(255,255,255,0.18);
+    padding:16px 24px;
     border-radius:18px;
     width:280px;
     text-align:center;
@@ -130,20 +157,46 @@ body{
 }
 
 .gift.open .caption{
-    top:-200px;
+    top:-210px;
     opacity:1;
 }
 </style>
 </head>
 <body>
 
+<!-- Đèn Noel -->
+<script>
+for(let i=0;i<20;i++){
+  const l=document.createElement("div");
+  l.className="light";
+  l.style.left=Math.random()*100+"vw";
+  l.style.top=Math.random()*60+"vh";
+  l.style.animationDelay=Math.random()*2+"s";
+  document.body.appendChild(l);
+}
+</script>
+
+<!-- Tuyết -->
+<script>
+for(let i=0;i<60;i++){
+  const s=document.createElement("div");
+  s.className="snow";
+  s.innerHTML="❄";
+  s.style.left=Math.random()*100+"vw";
+  s.style.fontSize=Math.random()*14+10+"px";
+  s.style.animationDuration=Math.random()*5+5+"s";
+  document.body.appendChild(s);
+}
+</script>
+
+<!-- 🎁 Gift -->
 <div class="gift" id="gift">
     <div class="glow"></div>
 
     <div class="caption">
         🎄 Merry Christmas 🎄<br>
-        Khi mở món quà này<br>
-        cũng là lúc anh trao trọn yêu thương ❤️
+        Mùa đông có thể lạnh<br>
+        nhưng bên em là ấm áp nhất ❤️
     </div>
 
     <div class="lid"></div>
@@ -154,33 +207,32 @@ body{
 </div>
 
 <script>
-const gift = document.getElementById("gift");
+const gift=document.getElementById("gift");
 
 gift.addEventListener("click",()=>{
-    if(gift.classList.contains("open")) return;
-    gift.classList.add("open");
-    glitterBurst();
+  if(gift.classList.contains("open")) return;
+  gift.classList.add("open");
+  glitterBurst();
 });
 
-/* ✨ Kim tuyến lan tỏa */
+/* Kim tuyến lan tỏa */
 function glitterBurst(){
-    const total = 60;
-    for(let i=0;i<total;i++){
-        const g=document.createElement("div");
-        g.className="glitter";
+  for(let i=0;i<70;i++){
+    const g=document.createElement("div");
+    g.className="glitter";
 
-        const angle = Math.random()*2*Math.PI;
-        const distance = Math.random()*180+40;
+    const angle=Math.random()*2*Math.PI;
+    const dist=Math.random()*200+40;
 
-        g.style.setProperty("--x",Math.cos(angle)*distance+"px");
-        g.style.setProperty("--y",Math.sin(angle)*distance+"px");
+    g.style.setProperty("--x",Math.cos(angle)*dist+"px");
+    g.style.setProperty("--y",Math.sin(angle)*dist+"px");
 
-        g.style.left="75px";
-        g.style.top="50px";
-        gift.appendChild(g);
+    g.style.left="75px";
+    g.style.top="55px";
 
-        setTimeout(()=>g.remove(),1800);
-    }
+    gift.appendChild(g);
+    setTimeout(()=>g.remove(),1800);
+  }
 }
 </script>
 
