--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Christmas Snow Magic 🎄</title>
+<title>Christmas Snow Melt 🎄</title>
 
 <link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@600&display=swap" rel="stylesheet">
 
@@ -30,19 +30,23 @@ body{
     opacity:0.9;
     cursor:pointer;
     animation:fall linear infinite;
-    transition:transform 0.6s ease, opacity 0.6s ease, filter 0.6s;
 }
 
-/* ❄ Tan khi chạm chuột */
-.snow:hover{
-    transform:scale(0);
-    opacity:0;
-    filter:blur(4px);
+/* animation tan */
+.snow.melt{
+    animation: melt 0.6s forwards;
 }
 
-/* rơi */
 @keyframes fall{
     to{ transform:translateY(110vh); }
+}
+
+@keyframes melt{
+    to{
+        transform:scale(0);
+        opacity:0;
+        filter:blur(4px);
+    }
 }
 
 /* ===== LIGHTS ===== */
@@ -184,7 +188,7 @@ for(let i=0;i<20;i++){
 }
 </script>
 
-<!-- Tuyết có thể tan -->
+<!-- Tuyết tan rồi biến mất -->
 <script>
 for(let i=0;i<70;i++){
   const s=document.createElement("div");
@@ -193,6 +197,13 @@ for(let i=0;i<70;i++){
   s.style.left=Math.random()*100+"vw";
   s.style.fontSize=Math.random()*14+10+"px";
   s.style.animationDuration=Math.random()*5+5+"s";
+
+  s.addEventListener("mouseenter",()=>{
+      if(s.classList.contains("melt")) return;
+      s.classList.add("melt");
+      setTimeout(()=>s.remove(),600); // 🔥 biến mất hẳn
+  });
+
   document.body.appendChild(s);
 }
 </script>
@@ -203,8 +214,8 @@ for(let i=0;i<70;i++){
 
     <div class="caption">
         🎄 Merry Christmas 🎄<br>
-        Ngay cả tuyết cũng tan<br>
-        khi chạm vào yêu thương ❤️
+        Tuyết tan đi thật nhanh,<br>
+        nhưng yêu thương thì ở lại ❤️
     </div>
 
     <div class="lid"></div>
@@ -223,7 +234,6 @@ gift.addEventListener("click",()=>{
   glitterBurst();
 });
 
-/* Kim tuyến lan tỏa */
 function glitterBurst(){
   for(let i=0;i<70;i++){
     const g=document.createElement("div");
